# cg_number_shifting

./: .gitignore  level.txt  makefile  solution.txt
cg_shifting_marchete/: CLANG17.bat  RN_ExploDiv_7.cpp  new_submit.py  readme.md  run.bat
cg_shifting_runner/: .env.dist  database.py  dev.ipynb  main.py  pyproject.toml  submit.py
cg_shifting_solver/: Cargo.toml
cg_shifting_solver/src/: constants.rs  game_state.rs  loader.rs  main.rs  solver.rs
cg_shifting_solver/src/entity/: action.rs  enums.rs  game_state.rs  mod.rs  solution.rs  tile.rs
cg_shifting_stats/: analysis.ipynb  pyproject.toml
